Fix the source load button. The Load From Jerry button did not work properly. There was a problem with multiple the clicks and the multiple buttons display. Now loads the source only once into the editor and the button is aligned to the message line.

--- a/css/custom.css
+++ b/css/custom.css
@@ -414,6 +414,11 @@ input[type="number"] {
   color: #ff1a1a;
 }
 
-#info-panels .console #console-panel .log-debug {
-  color: #595959;
+#info-panels .console #console-panel .log-debug,
+#info-panels .console #console-panel .log-debug-dom {
+  color: #000;
+}
+
+#info-panels .console #console-panel .log-debug-dom {
+  float: left;
 }
